# suitecrmdemo-data-fetching

./: README.md  main.py  pyproject.toml
app/: application.py
app/api/: fetch.py  routers.py
app/database/: db_mysql.py
app/models/: tortoise_models.py
